--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="root" class="container-fluid p-0 vh-100 vw-100 d-flex flex-column"></div>
-    <script type="module" src="/src/index.js"></script>
+    <script type="text/html" src="/src/index.js"></script>
   </body>
 </html>
